# random-forest-mc

./: .flake8  .pre-commit-config.yaml  Baseline_Model.ipynb  Customized_Model.ipynb  FIA.ipynb  Feat_Eng.ipynb  LICENSE  README.md  Results_creditcard_Baseline.csv  Results_creditcard_Custom.csv  Results_creditcard_Init.csv  TODO.md  TOREVIEW.md  Usage.ipynb  changelog  changelog.md  env_datasets.json  forest.drawio  linkedin_post.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml
src/random_forest_mc/: __init__.py  forest.py  model.py  modelQ.py  tree.py  utils.py
tests/: RandomForestMC_test.py  _test_forest.py  _test_model.py  _test_tree.py  _test_utils.py  datasets_metadata.json  env_datasets.json  extract_datasets.sh  install_build_dependencies.sh  lint.sh  poetry_shell.zsh  requirements.txt  run_tests.sh  run_tests_all_versions.sh  test_forest.py  test_model.py  test_tree.py  test_utils.py  versions.txt
tests/datasets/: creditcard.csv.bz2  creditcard_trans_float.csv.bz2  creditcard_trans_int.csv.bz2  iris.csv.bz2  titanic.csv.bz2
utils/: Comparison_Experiments.ipynb  Customized_Model.ipynb  Experiments.ipynb  Feat_Importance.ipynb  Load_Model.ipynb  README.md  RandomForestClassifier_creditcard_trans_int_43.joblib  RandomForestClassifier_creditcard_trans_int_43.joblib.bz2  RandomForestClassifier_creditcard_trans_int_47.joblib  RandomForestClassifier_creditcard_trans_int_47.joblib.bz2  RandomForestClassifier_creditcard_trans_int_53.joblib  RandomForestClassifier_creditcard_trans_int_53.joblib.bz2  RandomForestClassifier_creditcard_trans_int_59.joblib  RandomForestClassifier_creditcard_trans_int_59.joblib.bz2  RandomForestClassifier_titanic_43.joblib.bz2  RandomForestClassifier_titanic_47.joblib.bz2  RandomForestClassifier_titanic_53.joblib.bz2  RandomForestClassifier_titanic_59.joblib.bz2  RandomForestMC_creditcard_trans_int_43.json.bz2  RandomForestMC_creditcard_trans_int_47.json.bz2  RandomForestMC_creditcard_trans_int_53.json.bz2  RandomForestMC_creditcard_trans_int_59.json.bz2  RandomForestMC_titanic_43.json.bz2  RandomForestMC_titanic_47.json.bz2  RandomForestMC_titanic_53.json  RandomForestMC_titanic_53.json.bz2  RandomForestMC_titanic_59.json  RandomForestMC_titanic_59.json.bz2  Save_Load_Model.ipynb  Usage.ipynb  cls_rfmc_v030.json.bz2  cls_rfmc_v033.json.bz2  cls_rfmc_v033_2.json.bz2  comparison_experiments_creditcard_trans_int.csv  comparison_experiments_titanic.csv
