[tool.poetry]
name = "random-forest-mc"
version = "1.1.1"
description = "This project is about use Random Forest approach using a dynamic tree selection Monte Carlo based."
authors = ["Israel Oliveira <israel.oliveira@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/ysraell/random-forest-mc"
repository = "https://github.com/ysraell/random-forest-mc"
keywords = ["random forest", "random"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8.17,<3.12"
pandas = ">=1.3"
numpy = ">=1.20"
tqdm = ">=4.60"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
black = "^22.10.0"
pytest-check = "^1.0.10"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
