[tool.poetry]
name = "random-forest-mc"
version = "1.2.0-dev"
description = "This project is about use Random Forest approach using a dynamic tree selection Monte Carlo based."
authors = ["Israel Oliveira <prof.israel@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/ysraell/random-forest-mc"
repository = "https://github.com/ysraell/random-forest-mc"
keywords = ["random forest", "random"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.12"
pandas = ">=1.3"
numpy = ">=1.20"
tqdm = ">=4.60"

[tool.poetry.group.dev.dependencies]
pytest-cov = "4.1.0"
coverage = "7.5.0"
pytest = "^8.3.3"
pytest-check = "^2.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
